form headings and broken links

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer with links to other sites -->
 <footer>
 <nav class="navbar fixed-bottom navbar-light bg-light">    <div class="container">
-      <p>Made by <a href="kelseychristensen.com">Kelsey Christensen</a></p>
+      <p>Made by <a href="http://kelseychristensen.com/">Kelsey Christensen</a></p>
     <table>
 
       <tr>
